# fastapi-user-auth-api

./: README.md  main.py  pyproject.toml  requirements.txt
auth/: jwt_handler.py
models/: user.py
schemas/: user.py
